# -A-share

./: .gitignore  README.md  dashboard.json  pyproject.toml
.github/workflows/: scheduled-refresh.yml
docs/: data_source_audit.md  research_summary.md
scripts/: build_static_site.py
src/ashare_indicator_monitor/: __init__.py  app.py  config.py  indicators.py  models.py  providers.py  scheduler.py  service.py  utils.py  xingyao_provider.py
static/: app.js
tests/: test_indicators.py  test_providers.py  test_scheduler.py  test_service.py  test_static_site.py
web/: app.js  dashboard.json  index.html  style.css
